# video-app

./: CMakeLists.txt  README.md
lib/FFmpeg/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
